--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHILLY_MALAYALI_CLUB</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="/static/css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -27,7 +27,8 @@
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
-                    <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
+                    <img src="/static/images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
+
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -78,7 +79,6 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="membership.html">Membership</a>
                                 </li>
-
                             </ul>
                         </div>
                     </div>
@@ -105,31 +105,31 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/philly-ssjhnbdr9wp0rg4f.jpg" class="d-block" alt="...">
+                    <img src="/static/images/philly-ssjhnbdr9wp0rg4f.jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>Rich heritage, Vibrant present</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/KathakaliDance.jpg" class="d-block" alt="...">
+                    <img src="/static/images/KathakaliDance.jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>A Jewel of enchanting beauty and rich cultural heritage</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/sadhya 2.jpg" class="d-block" alt="...">
+                    <img src="/static/images/sadhya 2.jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>A Symbol of unity, cultural richness, and the spirit of togetherness</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/philadelphia night.jpg" class="d-block" alt="...">
+                    <img src="/static/images/philadelphia night.jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>Change the world, one kind act at a time</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/524419.jpg" class="d-block" alt="...">
+                    <img src="/static/images/524419.jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>Every hundred feet the world changes</h3>
                     </div>
@@ -146,41 +146,6 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-
-        <!-- <div class="container  pt-5" id="about">
-            <div class="row">
-                <div class="col-md-8 lh-lg">
-                    <div class="description text-justify">
-                        <h1>About Us</h1>
-
-                        <p>Malayali Association of Delaware Valley, popularly know as Kalaa, was officially formed as
-                            a community organization in October 1979. KALAA is an acronym for Kerala Art and Literary
-                            Association of America.To bring together the Malayalees in the Delaware Valley and work
-                            for the social, cultural and educational advancement of its members and the community at
-                            large was the goal of the founding members of the group.</p>
-                        <p>The beginning of Kalaa was the outcome of long discussions and negotiations. People worked
-                            together
-                            in presenting the drama taunted the idea of starting a Malayalee association in
-                            Philadelphia. </p>
-                        <p>After many meetings and prolonged discussion, the organization formed in October 1979.Today
-                            Kalaa is one of the largest Malayalee Associations in North America with more than four
-                            hundred
-                            members.True to its original spirit, Kalaa has made extraordinary services to the Malayalee
-                            community and the Indian community in general. Numerous cultural, literary and educational
-                            programs were coordinated by Kalaa. It also annually celebrated the major festivals of
-                            Kerala Conducting Malayalam schools, presenting Malayalam movies and presenting guest
-                            artists from Kerala are also in Kalaa’s activity list. </p>
-
-                    </div>
-
-                </div>
-                <div class="col-md-4">
-                    <div class="logo mt-5">
-                        <img src="images/Logo.png" class="img-fluid " alt="Logo">
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
         <div class="container my-5 py-3">
             <div class="row align-items-center gx-5">
