--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
 
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/aboutus.css">
+    <link rel="stylesheet" href="/static/css/contact.css">
+    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="/static/css/footer.css">
+    <link rel="stylesheet" href="/static/css/aboutus.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -36,7 +36,7 @@
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
-                    <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
+                    <img src="/static/images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -94,7 +94,7 @@
             </div>
         </nav>
     </section>
-            <section class="hero-section" style="background: url('images/group.png') center center / cover no-repeat;">
+            <section class="hero-section" style="background: url('/static/images/group.png') center center / cover no-repeat;">
     <div class="hero-content">
           <h1 class="">Contact Us</h1>
     </div>
@@ -104,7 +104,7 @@
     <div class="main">
         <div class="container contact-section">
             <div class="image">
-                <img src="images/kalaa logo.jpg" alt="Logo">
+                <img src="/static/images/kalaa logo.jpg" alt="Logo">
                 <!-- <a href="membership.html" class="join-btn" target="_blank">Join Us</a> -->
 
             </div>
@@ -140,7 +140,7 @@
 
     <footer class="">
         <div class="p-3">
-            &copy; 2024 My Website. All rights reserved.
+            &copy;  2024 CHRIST INFOTECH. All rights reserved.
         </div>
     </footer>
 
