--- a/templates/membership.html
+++ b/templates/membership.html
@@ -124,9 +124,9 @@
     <title>Membership</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/membership.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="/static/css/membership.css">
+    <link rel="stylesheet" href="/static/css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -138,7 +138,7 @@
         <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand text-decoration-none" href="index.html">
-                    <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
+                    <img src="/static/images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -197,7 +197,7 @@
     </section>
 
     <!-- Hero Section -->
-<section class="membership-hero" style="background-image: url('images/group.png'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 100px 0; color: white;">
+<section class="membership-hero" style="background-image: url('/static/images/group.png'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 100px 0; color: white;">
     <div class="container">
         <div class="hero-content">
             <h1 class="hero-title">Join KALAA</h1>
