--- a/templates/past.html
+++ b/templates/past.html
@@ -4,9 +4,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Past events</title>
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/events.css">
-  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="/static/css/index.css">
+  <link rel="stylesheet" href="/static/css/events.css">
+  <link rel="stylesheet" href="/static/css/footer.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -26,7 +26,7 @@
       <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand text-decoration-none" href="index.html">
-           <img src="images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
+           <img src="/static/images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,7 +93,7 @@
         <!-- Event Card 1 -->
         <div class="col-md-6 col-lg-4">
           <div class="card shadow border-0 h-100">
-            <img src="images/image.png" class="card-img-top img-fluid" alt="Convention" />
+            <img src="/static/images/image.png" class="card-img-top img-fluid" alt="Convention" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Convention</h3>
               <p class="card-text text-secondary text-center">
@@ -106,7 +106,7 @@
         <!-- Event Card 2 -->
         <div class="col-md-6 col-lg-4">
           <div class="card shadow border-0 h-100">
-            <img src="images/carrom 1.png" class="card-img-top img-fluid" alt="Carrom" />
+            <img src="/static/images/carrom 1.png" class="card-img-top img-fluid" alt="Carrom" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Carrom</h3>
               <p class="card-text text-secondary text-center">
@@ -119,7 +119,7 @@
         <!-- Event Card 3 -->
         <div class="col-md-6 col-lg-4">
           <div class="card shadow border-0 h-100">
-            <img src="images/event1.png" class="card-img-top img-fluid" alt="Charity" />
+            <img src="/static/images/event1.png" class="card-img-top img-fluid" alt="Charity" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Charity</h3>
               <p class="card-text text-secondary text-center">
@@ -132,7 +132,7 @@
         <!-- Event Card 4 -->
         <div class="col-md-6 col-lg-4 my-5 py-5">
           <div class="card shadow border-0 h-100">
-            <img src="images/event1.png" class="card-img-top img-fluid" alt="Onam" />
+            <img src="/static/images/event1.png" class="card-img-top img-fluid" alt="Onam" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Onam</h3>
               <p class="card-text text-secondary text-center">
@@ -145,7 +145,7 @@
         <!-- Event Card 5 -->
         <div class="col-md-6 col-lg-4 my-5 py-5">
           <div class="card shadow border-0 h-100">
-            <img src="images/image.png" class="card-img-top img-fluid" alt="Onam" />
+            <img src="/static/images/image.png" class="card-img-top img-fluid" alt="Onam" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Onam</h3>
               <p class="card-text text-secondary text-center">
@@ -158,7 +158,7 @@
         <!-- Event Card 6 -->
         <div class="col-md-6 col-lg-4 my-5 py-5">
           <div class="card shadow border-0 h-100">
-            <img src="images/carrom 1.png" class="card-img-top img-fluid" alt="Carrom" />
+            <img src="/static/images/carrom 1.png" class="card-img-top img-fluid" alt="Carrom" />
             <div class="card-body">
               <h3 class="card-title text-center text-dark">Carrom</h3>
               <p class="card-text text-secondary text-center">
@@ -174,7 +174,7 @@
 
   <footer class="">
     <div class="p-3">
-      &copy; 2024 My Website. All rights reserved.
+      &copy;  2024 CHRIST INFOTECH. All rights reserved.
     </div>
   </footer>
 
