--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -98,7 +98,7 @@
                         <!-- Image -->
                         <div class="col-lg-6">
                             <div class="about-image-wrapper">
-                                <img src="https://images.unsplash.com/photo-1511632765486-a01980e01a18?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" 
+                                <img src="/static/images/group.png" 
                                      class="img-fluid" alt="Our Team" />
                             </div>
                         </div>
