--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,98 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="/static/css/gallery.css">
-    <link rel="stylesheet" href="/static/css/index.css">
-    <link rel="stylesheet" href="/static/css/footer.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/Upcoming.css') }}">
 
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+{% endblock %}
 
-</head>
-
-<body>
-
-
-    <section class="header">
-        <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
-            <div class="container-fluid">
-                <!-- Logo -->
-                <a class="navbar-brand text-decoration-none" href="index.html">
-                     <img src="/static/images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
-                    <div class="col-12">
-                        <a class="navbar-brand text-decoration-none" href="index.html">
-                            <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware Valley</span>
-                        </a>
-                    </div>
-                    <div class="col-12 d-flex align-items-center justify-content-center">
-                        <div class="navbar-brand">
-                            <ul class="navbar-nav mb-2 mb-lg-0  ">
-                                <li class="nav-item ">
-                                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="aboutus.html">About Us</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="index.html#vs">Vision & Mission</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown"
-                                        aria-expanded="false">
-                                        Events
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="upcoming.html">Upcoming Events</a></li>
-                                        <li><a class="dropdown-item" href="past.html">Past Events</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="gallery.html">Gallery</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="team.html">Team</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="news.html">News</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="membership.html">Membership</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </section>
-
+{% block content %}
     <div class="container">
         <h1 class="gallery-title text-warning">Gallery</h1>
 
@@ -134,14 +52,10 @@
         <img id="fullscreen-img" src="" alt="Full Image">
     </div>
 
+<!-- Include Footer -->
+{% include "footer.html" %}
 
-    <footer class="">
-        <div class="p-3">
-            &copy;  2024 CHRIST INFOTECH. All rights reserved.
-        </div>
-    </footer>
-
-    <!-- Bootstrap JS (Optional) -->
+   <!-- Bootstrap JS (Optional) -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -190,8 +104,4 @@
 
     </script>
 
-
-
-</body>
-
-</html>
+{% endblock %}
