--- a/templates/membership.html
+++ b/templates/membership.html
@@ -1,86 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/membership.css') }}">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Membership</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/index.css">
-    <link rel="stylesheet" href="/static/css/membership.css">
-    <link rel="stylesheet" href="/static/css/footer.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-</head>
 
-<body>
 
-    <!-- Navigation -->
-    <section class="header">
-        <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
-            <div class="container-fluid">
-                <a class="navbar-brand text-decoration-none" href="index.html">
-                    <img src="/static/images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
-                    <div class="col-12">
-                        <a class="navbar-brand text-decoration-none" href="index.html">
-                            <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware
-                                Valley</span>
-                        </a>
-                    </div>
-                    <div class="col-12 d-flex align-items-center justify-content-center">
-                        <div class="navbar-brand">
-                            <ul class="navbar-nav mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="aboutus.html">About Us</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="index.html#vs">Vision & Mission</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#events" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                        Events
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="upcoming.html">Upcoming Events</a></li>
-                                        <li><a class="dropdown-item" href="past.html">Past Events</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="gallery.html">Gallery</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="team.html">Team</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="news.html">News</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="membership.html">Membership</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </section>
+{% endblock %}
+
+{% block content %}
 
     <!-- Hero Section -->
     <section class="membership-hero"
@@ -155,7 +85,7 @@
                 <i class="fas fa-user-plus"></i> Membership Application Form
             </h2>
 
-            <form id="membershipApplicationForm">
+            <form id="membershipApplicationForm" method="POST" action="/membership">
                 <div class="form-section">
                     <h4 class="section-title">Personal Information</h4>
                     <div class="row">
@@ -238,11 +168,9 @@
         <button class="join-btn" onclick="resetForm()" style="margin: 20px auto 0;">Submit Another Application</button>
     </div>
 
-    <footer class="">
-        <div class="p-3">
-            &copy; 2024 CHRIST INFOTECH. All rights reserved.
-        </div>
-    </footer>
+
+<!-- Include Footer -->
+{% include "footer.html" %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -406,7 +334,4 @@
         }
     </script>
 
-
-</body>
-
-</html>
+{% endblock %}
