--- a/templates/team.html
+++ b/templates/team.html
@@ -1,90 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Team</title>
-    <link rel="stylesheet" href="/static/css/team.css" />
-    <link rel="stylesheet" href="/static/css/index.css">
-    <link rel="stylesheet" href="/static/css/footer.css">
-     <link rel="stylesheet" href="/static/css/aboutus.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/Upcoming.css') }}">
 
-</head>
 
-<body>
 
-    <section class="header">
-        <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
-            <div class="container-fluid">
-                <!-- Logo -->
-                <a class="navbar-brand text-decoration-none" href="index.html">
-                    <img src="/static/images/kalaa logo.jpg" alt="Logo" class="navbar-logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
-                    <div class="col-12 text-center">
-                        <a class="navbar-brand text-decoration-none justify-content-center" href="index.html">
-                            <span class="fs-1">കലാ</span> <span class="fs-3">Malayali Association of Delaware Valley</span>
-                        </a>
-                    </div>
-                    <div class="col-12 d-flex align-items-center justify-content-center">
-                        <div class="navbar-brand">
-                            <ul class="navbar-nav mb-2 mb-lg-0  ">
-                                <li class="nav-item ">
-                                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="aboutus.html">About Us</a>
-                                </li>
+{% endblock %}
 
-                                <li class="nav-item">
-                                    <a class="nav-link" href="index.html#vs">Vision & Mission</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                        aria-expanded="false">
-                                        Events
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="upcoming.html">Upcoming Events</a></li>
-                                        <li><a class="dropdown-item" href="past.html">Past Events</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="gallery.html">Gallery</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="team.html">Team</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="news.html">News</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="membership.html">Membership</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </section>
-    <!-- Hero Section -->
-
+{% block content %}
 <section class="hero-section" style="background: url('/static/images/group.png') center center / cover no-repeat;">
     <div class="hero-content">
         <h1 class="heading mb-5">Meet Our Team</h1>
@@ -126,12 +52,9 @@
         </div>
     </div>
 
+<!-- Include Footer -->
+{% include "footer.html" %}
 
-    <footer class="">
-        <div class="p-3">
-            &copy;  2024 CHRIST INFOTECH. All rights reserved.
-        </div>
-    </footer>
 
     <!-- Bootstrap JS (Optional) -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -154,9 +77,4 @@
     });
   });
 </script>
-
-
-
-</body>
-
-</html>
+{% endblock %}
