--- a/templates/events/past.html
+++ b/templates/events/past.html
@@ -3,8 +3,7 @@
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/Upcoming.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/past.css') }}">
 
 
 
@@ -13,7 +12,7 @@
 {% block content %}
  <section id="events" class="py-5 mb-5 bg-light">
     <div class="container">
-      <h1 class="text-center fw-bold mb-5 text-warning">Past Events</h1>
+      <h1 class="text-center fw-bold mb-5">Past Events</h1>
 
       <div class="row g-5">
         <!-- Event Card 1 -->
