--- a/templates/team.html
+++ b/templates/team.html
@@ -4,13 +4,14 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/Upcoming.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/team.css') }}">
 
 
 
 {% endblock %}
 
 {% block content %}
+
 <section class="hero-section" style="background: url('/static/images/group.png') center center / cover no-repeat;">
     <div class="hero-content">
         <h1 class="heading mb-5">Meet Our Team</h1>
