--- a/static/css/news.css
+++ b/static/css/news.css
@@ -1,4 +1,3 @@
-
 .text-box {
     width: 300%;
     color: white;
@@ -8,29 +7,8 @@
     transform: translate(-50%, -50%);
     text-align: center;
 }
-
-
-
-/* Style for news schedule */
-.schedule {
-    flex: 1;
-}
-
-/* Style for calendar model */
-.calendar {
-    border: 2px solid #ccc;
-    border-radius: 10px;
-    padding: 120px;
-    height:500px;
-    width: 800px;
-}
- body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f9f9f9;
-    }
-
-    .hero {
-        margin-top: 7%;
+ .hero {
+      margin-top: 8%;
       background: linear-gradient(135deg, #f9b233, #ffc107);
       color: white;
       padding: 80px 0;
@@ -42,10 +20,18 @@
       font-size: 3rem;
       font-weight: bold;
       animation: fadeDown 1s ease-in-out;
+      margin-top: 10%;
     }
 
     .news-section {
       padding: 60px 15px;
+    }
+
+    .hero-content h1{
+      margin-top: 20%;
+      align-items: center;
+      font-size: 2.5rem;
+      font-weight: bold;
     }
 
     .news-card {
