--- a/templates/events/upcoming.html
+++ b/templates/events/upcoming.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/Upcoming.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/upcoming.css') }}">
 
 
 
@@ -13,7 +13,7 @@
 {% block content %}
  <section id="events" class="py-5 mb-5 bg-light">
     <div class="container">
-      <h1 class="text-center fw-bold mb-5 text-warning" style="color: #b58900;">Upcoming Events</h1>
+      <h1 class="text-center fw-bold mb-5">Upcoming Events</h1>
 
       <div class="row g-5">
         <!-- Event Card 1 -->
