--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -3,16 +3,16 @@
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/Upcoming.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/gallery.css') }}">
 
 
 
 {% endblock %}
 
 {% block content %}
+
     <div class="container">
-        <h1 class="gallery-title text-warning">Gallery</h1>
+        <h1 class="gallery-title fw-bold">Gallery</h1>
 
         <div class="gallery-grid">
             <section class="event" data-images="kerala-culture.jpg,gallery3.jpg,gallery4.jpg,pulikali.jpeg">
@@ -57,7 +57,6 @@
 
    <!-- Bootstrap JS (Optional) -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
