--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,32 +1,3 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">Kalaa</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="/team">Team</a></li>
-        <li class="nav-item"><a class="nav-link" href="/gallery">Gallery</a></li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">Events</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/events/upcoming">Upcoming</a></li>
-            <li><a class="dropdown-item" href="/events/past">Past</a></li>
-          </ul>
-        </li>
-        <li class="nav-item"><a class="nav-link" href="/news">News</a></li>
-        <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="/membership">Membership</a></li>
-      </ul>
-    </div>
-  </div>
-</nav> -->
-
-
-
 <section class="header">
     <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
         <div class="container-fluid">
@@ -35,17 +6,17 @@
                 <img src="{{ url_for('static', filename='images/kalaa logo.jpg') }}" alt="Logo" class="navbar-logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
-<div class="col-12 text-center">
-    <a class="navbar-brand kalaa-title text-decoration-none" href="/">
-        <span class="kalaa-malayalam">കലാ</span>
-        <span class="kalaa-english">Malayali Association of Delaware Valley</span>
-    </a>
-</div>
+                <div class="col-12 text-center">
+                    <a class="navbar-brand kalaa-title text-decoration-none" href="/">
+                        <span class="kalaa-malayalam">കലാ</span>
+                        <span class="kalaa-english">Malayali Association of Delaware Valley</span>
+                    </a>
+                </div>
 
                 <div class="col-12 d-flex align-items-center justify-content-center">
                     <div class="navbar-brand">
@@ -53,7 +24,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="/">Home</a>
                             </li>
-                            
+
                             <li class="nav-item">
                                 <a class="nav-link" href="/about">About Us</a>
                             </li>
@@ -61,8 +32,8 @@
                                 <a class="nav-link" href="#vs">Vision & Mission</a>
                             </li> -->
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
                                     Events
                                 </a>
                                 <ul class="dropdown-menu">
@@ -92,4 +63,3 @@
         </div>
     </nav>
 </section>
-
